<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.firstfragment.FirstFragment">

    <TextView
        android:id="@+id/titleOfFirstScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/конвертер_валют"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMainScreen01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/colorCardMainScreen01"
        app:cardCornerRadius="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleOfFirstScreen">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_16dp"
            app:cardBackgroundColor="@color/colorCardMainScreen02"
            app:cardCornerRadius="@dimen/_16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amountOfCurrency"
                        style="@style/NoUnderlineEditTextStyle"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:hint="@string/введите_сумму"
                        android:inputType="number"
                        android:paddingEnd="@dimen/_16dp"
                        android:textColor="@color/white"
                        app:boxBackgroundMode="none" />

                </LinearLayout>

                <TextView
                    android:id="@+id/lineBetween"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_2dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:background="@color/colorGrayLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:src="@drawable/icon_russia" />

                    <TextView
                        android:id="@+id/amountOfRubles"
                        style="@style/NoUnderlineEditTextStyle"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:hint="@string/значение_в_рублях"
                        android:paddingEnd="@dimen/_16dp"
                        android:textColor="@color/white"
                        app:boxBackgroundMode="none" />

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionButtonFirstScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:backgroundTint="@color/ButtonBlue"
        android:text="@string/конвертировать"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardMainScreen01" />


</androidx.constraintlayout.widget.ConstraintLayout>